tests/type-checking/functions/return/return_int_global_scope_fail.xdsl
// RUN: choco-opt -p check-assign-target,name-analysis,type-checking %s | filecheck %s

// 
// return 0

builtin.module() {
  choco.ast.program() {} {
    choco.ast.return() {
      choco.ast.literal() ["value" = 0 : !i32]
    }
  }
}
// CHECK: Semantic error:
